--- a/test/Views/Home/Contacts.cshtml
+++ b/test/Views/Home/Contacts.cshtml
@@ -99,21 +99,43 @@
 
 
 <script>
-    window.onload = function() {
+    
 
-        $("#faqP").css("color", "white");
+    
+    window.addEventListener('load', function(event){
+
+       $("#faqP").css("color", "white");
         $("#mainPageP").css("color", "white");
         $("#contactsP").css("color", "#F8BF0C");
         $("#aboutUsP").css("color", "white");
         $('#load').hide();
+        var newWidth = window.innerWidth;
+        var newHeight = window.innerHeight; 
 
-
-        if(window.innerWidth < 1000)
+        if(newWidth >= 1000)
+        {
+            $("#CategoriesDiv").show();
+        }
+        else
         {
             $("#CategoriesDiv").hide();
         }
+    });
 
-    };
+
+    window.addEventListener('resize', function(event){
+        var newWidth = window.innerWidth;
+        var newHeight = window.innerHeight; 
+
+        if(newWidth >= 1000)
+        {
+            $("#CategoriesDiv").show();
+        }
+        else
+        {
+            $("#CategoriesDiv").hide();
+        }
+    });
 
     
     
