--- a/test/Views/Home/FAQ.cshtml
+++ b/test/Views/Home/FAQ.cshtml
@@ -79,20 +79,41 @@
 </div>
 
 <script>
-    window.onload = function() {
+    
+
+    indow.addEventListener('load', function(event){
 
         $("#faqP").css("color", "#F8BF0C");
         $("#mainPageP").css("color", "white");
         $("#contactsP").css("color", "white");
         $("#aboutUsP").css("color", "white");
         $('#load').hide();
+        var newWidth = window.innerWidth;
+        var newHeight = window.innerHeight; 
 
-
-        if(window.innerWidth < 1000)
+        if(newWidth >= 1000)
+        {
+            $("#CategoriesDiv").show();
+        }
+        else
         {
             $("#CategoriesDiv").hide();
         }
+    });
 
-    };
+
+    window.addEventListener('resize', function(event){
+        var newWidth = window.innerWidth;
+        var newHeight = window.innerHeight; 
+
+        if(newWidth >= 1000)
+        {
+            $("#CategoriesDiv").show();
+        }
+        else
+        {
+            $("#CategoriesDiv").hide();
+        }
+    });
 
 </script>
