--- a/test/Views/Home/Index.cshtml
+++ b/test/Views/Home/Index.cshtml
@@ -180,7 +180,7 @@
                     <h1 style="text-align:center ">@SharedLocalizer["Home"]</h1>
                     <div class="col-md-8">
                         <!-- Slideshow container -->
-                        <div class="slideshow-container">
+                        <div class="slideshow-container" style="margin-top:20px;">
 
                             <!-- Full-width images with number and caption text -->
                             <div class="mySlides fade">
