--- a/test/Views/Home/Index.cshtml
+++ b/test/Views/Home/Index.cshtml
@@ -287,10 +287,10 @@
 
                         <div class="card-transparent mb-2" style="margin-top:20px;">
                             <a href="@Url.Action("Index", "Home", new {category = 47, page = 1})" style=" text-decoration: none;">
-                                <img class="card-img-top side-card-size" src="data:image/png;base64,@Model.Posts[2].ThumbnailBase64" alt="Card image cap" style="height:150px;">
-                                <div class="card-body" style="background-color:#F8BF0C;border-radius:5px;">
+@*                                <img class="card-img-top side-card-size" src="/content/images/Blog.jpg" alt="Card image cap" style="height:150px;">
+*@                                <div class="card-body" style="background-color:#F8BF0C;border-radius:5px;">
                                     <div>
-                                        <h2 style="margin-left:40%">Blog</h2>
+                                        <h4 style="text-align:center">Blog</h4>
                                     </div>
                                 </div>
                             </a>
@@ -299,9 +299,9 @@
 
                         <div class="card-transparent mb-2" style="margin-top:20px;">
                             <a href="@Url.Action("PostInternalPage", "Home", new { id = 48})" style=" text-decoration: none;">
-                                <img class="card-img-top side-card-size" src="data:image/png;base64,@Model.Posts[2].ThumbnailBase64" alt="Card image cap" style="height:150px;">
-                                <div class="card-body" style="background-color:#F22222;border-radius:5px;">
-                                    <h2 style="margin-left:37%">Videos</h2>
+@*                                <img class="card-img-top side-card-size" src="/content/images/Media.jpg" alt="Card image cap" style="height:150px;">
+*@                                <div class="card-body" style="background-color:#F22222;border-radius:5px;">
+                                    <h4 style="text-align:center">Videos</h4>
                                 </div>
                             </a>
                         </div>
