employment as dropdown

--- a/test/Views/Home/Index.cshtml
+++ b/test/Views/Home/Index.cshtml
@@ -66,8 +66,70 @@
 
             <div style="margin-top:30px;" id="DesktopCategories">
 
-                @foreach (var category in Model.Categories)
+                @{
+                    var employmentDropdDown = Model.Categories.FirstOrDefault(x => x.MainCategoryId == 6);
+                }
+
+                <button class="accordion" style="margin-left:20px;">
+                        @if (Model.Culture == "uk")
+                        {
+                            <a style="text-decoration: none; padding-left: 50px"><p class="textStyle">@employmentDropdDown.MainCategory.NameUkrainian</p></a>
+                        }
+                        else if (Model.Culture == "en")
+                        {
+                            <a style="text-decoration: none; padding-left: 50px"><p class="textStyle">@employmentDropdDown.MainCategory.NameGeorgian</p></a>
+                        }
+                        else
+                        {
+                            <a style="text-decoration: none; padding-left: 50px"><p class="textStyle">@employmentDropdDown.MainCategory.NameEnglish</p></a>
+                        }
+                </button>
+                
+                <div class="panel">
+                @foreach (var category in Model.Categories.Where(x => x.MainCategoryId == 6))
                 {
+                    
+                        @if (Model.ChosenCategoryId == category.Id)
+                        {
+                            <div class="row activeCategory">
+                                @if (Model.Culture == "uk")
+                                {
+                                    <a style="text-decoration: none; padding-left: 50px" href="@Url.Action("Index", "Home", new {category = @category.Id, page = Model.Pager.CurrentPage})"><p class="textStyle">@category.CategoryUkrainianName</p></a>
+                                }
+                                else if (Model.Culture == "en")
+                                {
+                                    <a style="text-decoration: none; padding-left: 50px" href="@Url.Action("Index", "Home", new {category = @category.Id, page = Model.Pager.CurrentPage})"><p class="textStyle">@category.CategoryGeorgianName</p></a>
+                                }
+                                else
+                                {
+                                    <a style="text-decoration: none; padding-left: 50px" href="@Url.Action("Index", "Home", new {category = @category.Id, page = Model.Pager.CurrentPage})"><p class="textStyle">@category.CategoryEnglishName</p></a>
+                                }
+                            </div>
+                        }
+                        else
+                        {
+                            <div class="row categoryItem">
+                                @if (Model.Culture == "uk")
+                                {
+                                    <a style="text-decoration: none; padding-left: 50px" href="@Url.Action("Index", "Home", new {category = @category.Id, page = Model.Pager.CurrentPage})"><p class="textStyle">@category.CategoryUkrainianName</p></a>
+                                }
+                                else if (Model.Culture == "en")
+                                {
+                                    <a style="text-decoration: none; padding-left: 50px" href="@Url.Action("Index", "Home", new {category = @category.Id, page = Model.Pager.CurrentPage})"><p class="textStyle">@category.CategoryGeorgianName</p></a>
+                                }
+                                else
+                                {
+                                    <a style="text-decoration: none; padding-left: 50px" href="@Url.Action("Index", "Home", new {category = @category.Id, page = Model.Pager.CurrentPage})"><p class="textStyle">@category.CategoryEnglishName</p></a>
+                                }
+                            </div>
+                        }
+                }
+                </div>
+
+
+                @foreach (var category in Model.Categories.Where(x => x.MainCategoryId != 6))
+                {
+                   
                     if (Model.ChosenCategoryId == category.Id)
                     {
                         <div class="row activeCategory">
@@ -102,6 +164,7 @@
                             }
                         </div>
                     }
+                    
                 }
             </div>
 
