fix categories on FAQ page

--- a/test/Views/Home/FAQ.cshtml
+++ b/test/Views/Home/FAQ.cshtml
@@ -80,8 +80,7 @@
 
 <script>
     
-
-    indow.addEventListener('load', function(event){
+        window.addEventListener('load', function(event){
 
         $("#faqP").css("color", "#F8BF0C");
         $("#mainPageP").css("color", "white");
