--- a/test/Views/Home/AboutUs.cshtml
+++ b/test/Views/Home/AboutUs.cshtml
@@ -5,24 +5,93 @@
 @inject IStringLocalizer<SharedResources> SharedLocalizer
 
 
+    <style>
+    .accordion {
+        background-color: #B9B9B9;
+        color: #444;
+        cursor: pointer;
+        width: 100%;
+        text-align: left;
+        padding-left: 20px;
+        border: none;
+        outline: none;
+        transition: 0.4s;
+    }
+
+        /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
+        .active, .accordion:hover {
+            background-color: #B9B9B9;
+        }
+
+    /* Style the accordion panel. Note: hidden by default */
+    .panel {
+        background-color: #B9B9B9;
+        display: none;
+        overflow: hidden;
+    }
+
+</style>
+
+
+
 <div class="row" style="height:100vh;">
 
     <div class="col-md-3" style="background: #B9B9B9;" id="CategoriesDiv">
 
         <div style="margin-top:30px;">
-            @foreach (var category in Model.Categories)
-        {
-            <div class="row categoryItem">
+            
+            @{
+                var employmentDropdDown = Model.Categories.FirstOrDefault(x => x.MainCategoryId == 6);
+            }
+
+            <button class="accordion">
                 @if (Model.Culture == "uk")
+                {
+                    <a style="text-decoration: none; padding-left: 50px"><p class="textStyle">@employmentDropdDown.MainCategory.NameUkrainian</p></a>
+                }
+                else if (Model.Culture == "en")
+                {
+                    <a style="text-decoration: none; padding-left: 50px"><p class="textStyle">@employmentDropdDown.MainCategory.NameGeorgian</p></a>
+                }
+                else
+                {
+                    <a style="text-decoration: none; padding-left: 50px"><p class="textStyle">@employmentDropdDown.MainCategory.NameEnglish</p></a>
+                }
+            </button>
+            <div class="panel">
+                @foreach (var category in Model.Categories.Where(x => x.MainCategoryId == 6))
+                {
+                    <div class="row categoryItem">
+                        @if (Model.Culture == "uk")
+                        {
+                        <a class="textStyle" style="text-decoration: none; padding-left: 30px" href="@Url.Action("Index", "Home", new {category = @category.Id})"><p class="textStyle">@category.CategoryUkrainianName</p></a>
+                        }
+                        else if (Model.Culture == "en")
+                        {
+                        <a class="textStyle" style="text-decoration: none; padding-left: 30px" href="@Url.Action("Index", "Home", new {category = @category.Id})"><p class="textStyle">@category.CategoryGeorgianName</p></a>
+                        }
+                        else
+                        {
+                        <a class="textStyle" style="text-decoration: none; padding-left: 30px" href="@Url.Action("Index", "Home", new {category = @category.Id})"><p class="textStyle">@category.CategoryEnglishName</p></a>
+                        }
+                    </div>
+                }
+                </div>
+
+
+            @foreach (var category in Model.Categories.Where(x => x.MainCategoryId != 6))
+            {
+                <div class="row categoryItem">
+                    @if (Model.Culture == "uk")
                     {
-                <a class="textStyle" style="text-decoration: none; padding-left: 30px" href="@Url.Action("Index", "Home", new {category = @category.Id})"><p class="textStyle">@category.CategoryUkrainianName</p></a>
+                        <a class="textStyle" style="text-decoration: none; padding-left: 30px" href="@Url.Action("Index", "Home", new {category = @category.Id})"><p class="textStyle">@category.CategoryUkrainianName</p></a>
                     }
                     else
                     {
-                <a class="textStyle" style="text-decoration: none; padding-left: 30px" href="@Url.Action("Index", "Home", new {category = @category.Id})"><p class="textStyle">@category.CategoryGeorgianName</p></a>
+                        <a class="textStyle" style="text-decoration: none; padding-left: 30px" href="@Url.Action("Index", "Home", new {category = @category.Id})"><p class="textStyle">@category.CategoryGeorgianName</p></a>
                     }
-            </div>
-        }
+                </div>
+            }
         </div>
     </div>
 
@@ -117,4 +186,23 @@
         }
     });
 
+
+    var acc = document.getElementsByClassName("accordion");
+    var i;
+
+    for (i = 0; i < acc.length; i++) {
+        acc[i].addEventListener("click", function() {
+            /* Toggle between adding and removing the "active" class,
+            to highlight the button that controls the panel */
+            this.classList.toggle("active");
+
+            /* Toggle between hiding and showing the active panel */
+            var panel = this.nextElementSibling;
+            if (panel.style.display === "block") {
+                panel.style.display = "none";
+            } else {
+                panel.style.display = "block";
+            }
+        });
+    }
 </script>
