--- a/test/Views/Home/FAQ.cshtml
+++ b/test/Views/Home/FAQ.cshtml
@@ -4,15 +4,82 @@
 @inject Microsoft.AspNetCore.Mvc.Localization.IViewLocalizer localizer
 @inject IStringLocalizer<SharedResources> SharedLocalizer
 
+<style>
+    .accordion {
+        background-color: #B9B9B9;
+        color: #444;
+        cursor: pointer;
+        width: 100%;
+        text-align: left;
+        padding-left: 20px;
+        border: none;
+        outline: none;
+        transition: 0.4s;
+    }
+
+        /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
+        .active, .accordion:hover {
+            background-color: #B9B9B9;
+        }
+
+    /* Style the accordion panel. Note: hidden by default */
+    .panel {
+        background-color: #B9B9B9;
+        display: none;
+        overflow: hidden;
+    }
+
+</style>
 
 <div class="row" style="height:100vh;">
 
     <div class="col-md-3" style="background: #B9B9B9;" id="CategoriesDiv">
-        
+
         <div style="margin-top:30px;">
-        @foreach (var category in Model.Categories)
-        {
-           <div class="row categoryItem">
+
+
+            @{
+                var employmentDropdDown = Model.Categories.FirstOrDefault(x => x.MainCategoryId == 6);
+            }
+
+            <button class="accordion">
+                @if (Model.Culture == "uk")
+                {
+                    <a style="text-decoration: none; padding-left: 50px"><p class="textStyle">@employmentDropdDown.MainCategory.NameUkrainian</p></a>
+                }
+                else if (Model.Culture == "en")
+                {
+                    <a style="text-decoration: none; padding-left: 50px"><p class="textStyle">@employmentDropdDown.MainCategory.NameGeorgian</p></a>
+                }
+                else
+                {
+                    <a style="text-decoration: none; padding-left: 50px"><p class="textStyle">@employmentDropdDown.MainCategory.NameEnglish</p></a>
+                }
+            </button>
+            <div class="panel">
+                @foreach (var category in Model.Categories.Where(x => x.MainCategoryId == 6))
+                {
+                    <div class="row categoryItem">
+                        @if (Model.Culture == "uk")
+                        {
+                        <a class="textStyle" style="text-decoration: none; padding-left: 30px" href="@Url.Action("Index", "Home", new {category = @category.Id})"><p class="textStyle">@category.CategoryUkrainianName</p></a>
+                        }
+                        else if (Model.Culture == "en")
+                        {
+                        <a class="textStyle" style="text-decoration: none; padding-left: 30px" href="@Url.Action("Index", "Home", new {category = @category.Id})"><p class="textStyle">@category.CategoryGeorgianName</p></a>
+                        }
+                        else
+                        {
+                        <a class="textStyle" style="text-decoration: none; padding-left: 30px" href="@Url.Action("Index", "Home", new {category = @category.Id})"><p class="textStyle">@category.CategoryEnglishName</p></a>
+                        }
+                    </div>
+                }
+                </div>
+
+
+            @foreach (var category in Model.Categories.Where(x => x.MainCategoryId != 6))
+            {
+                <div class="row categoryItem">
                     @if (Model.Culture == "uk")
                     {
                         <a class="textStyle" style="text-decoration: none; padding-left: 30px" href="@Url.Action("Index", "Home", new {category = @category.Id})"><p class="textStyle">@category.CategoryUkrainianName</p></a>
@@ -22,15 +89,15 @@
                         <a class="textStyle" style="text-decoration: none; padding-left: 30px" href="@Url.Action("Index", "Home", new {category = @category.Id})"><p class="textStyle">@category.CategoryGeorgianName</p></a>
                     }
                 </div>
-        }
+            }
         </div>
     </div>
 
     <div class="col-md-9 bg-light" style="background: url('/content/images/background.svg') no-repeat bottom; background-position: 50% 115%;">
-         <h1 style="text-align:center ">@SharedLocalizer["FAQ"]</h1>
+        <h1 style="text-align:center ">@SharedLocalizer["FAQ"]</h1>
         <div class="container" style="margin-top:30px">
             <div class="row">
-                @if(@Model.Culture == "en")
+                @if (@Model.Culture == "en")
                 {
                     @Html.Raw(Model.Info.PageTextInGeorgian)
                 }
@@ -63,7 +130,7 @@
                         color: #626262;">ვებგვერდზე განთავსებული ინფორმაციის მოძიება და შეკრება შესაძლებელი გახდა ამერიკელი ხალხის გულუხვი დახმარების წყალობით, ამერიკის შეერთებული შტატების საერთაშორისო განვითარების სააგენტოს (USAID) დაფინანსებით. ვებგვერდზე განთავსებულ მასალაზე პასუხისმგებელია მხოლოდ საინიციატივო ჯგუფი და შესაძლოა არ გამოხატავდეს ამერიკის შეერთებული შტატების საერთაშორისო განვითარების სააგენტოს (USAID), აღმოსავლეთ-დასავლეთის მართვის ინსტიტუტის (EWMI), ან ამერიკის შეერთებული შტატების მთავრობის შეხედულებებს.</p>
         </div>
         <div class="col-md-2 justify-content-center" style="text-align:center">
-            <p  style="font-family: 'Roboto';
+            <p style="font-family: 'Roboto';
                         font-style: normal;
                         font-weight: 400;
                         font-size: 10px;
@@ -79,7 +146,7 @@
 </div>
 
 <script>
-    
+
         window.addEventListener('load', function(event){
 
         $("#faqP").css("color", "#F8BF0C");
@@ -88,7 +155,7 @@
         $("#aboutUsP").css("color", "white");
         $('#load').hide();
         var newWidth = window.innerWidth;
-        var newHeight = window.innerHeight; 
+        var newHeight = window.innerHeight;
 
         if(newWidth >= 1000)
         {
@@ -103,7 +170,7 @@
 
     window.addEventListener('resize', function(event){
         var newWidth = window.innerWidth;
-        var newHeight = window.innerHeight; 
+        var newHeight = window.innerHeight;
 
         if(newWidth >= 1000)
         {
@@ -114,5 +181,24 @@
             $("#CategoriesDiv").hide();
         }
     });
+
+    var acc = document.getElementsByClassName("accordion");
+    var i;
+
+    for (i = 0; i < acc.length; i++) {
+        acc[i].addEventListener("click", function() {
+            /* Toggle between adding and removing the "active" class,
+            to highlight the button that controls the panel */
+            this.classList.toggle("active");
+
+            /* Toggle between hiding and showing the active panel */
+            var panel = this.nextElementSibling;
+            if (panel.style.display === "block") {
+                panel.style.display = "none";
+            } else {
+                panel.style.display = "block";
+            }
+        });
+    }
 
 </script>
