fixed categories empty div on mobile view

--- a/test/Views/Home/Index.cshtml
+++ b/test/Views/Home/Index.cshtml
@@ -544,11 +544,13 @@
         {
             $("#MobileCategories").hide();
             $("#DesktopCategories").show();
+            $("#CategoriesDiv").show();
         }
         else
         {
             $("#MobileCategories").show();
             $("#DesktopCategories").hide();
+            $("#CategoriesDiv").hide();
         }
     });
 
@@ -560,11 +562,13 @@
         {
             $("#MobileCategories").hide();
             $("#DesktopCategories").show();
+            $("#CategoriesDiv").show();
         }
         else
         {
             $("#MobileCategories").show();
             $("#DesktopCategories").hide();
+            $("#CategoriesDiv").hide();
         }
     });
 
